custom/patches/deployment.filebrowser.yaml
---

apiVersion: 'apps/v1'
kind: 'Deployment'
metadata:
  name: 'filebrowser'
spec:
  template:
    spec:
      containers:
        - name: 'filebrowser'
          command: ['/filebrowser']
          args: ['-c', '/config/filebrowser.json']
          volumeMounts:
            - mountPath: '/config'
              name: 'filebrowser-config'
            - mountPath: '/srv'
              name: 'filebrowser-srv'
      volumes:
        - name: 'filebrowser-config'
          nfs:
            server: '3bp-waits'
            path: '/srv/config/filebrowser'
        - name: 'filebrowser-srv'
          nfs:
            server: '3bp-waits'
            path: '/srv'
          emptyDir:
      nodeName: '3bp-waits'
