custom/patches/deployment.flame.yaml
---

apiVersion: 'apps/v1'
kind: 'Deployment'
metadata:
  name: 'flame'
spec:
  template:
    spec:
      volumes:
        - name: 'flame-config'
          nfs:
            server: '3bp-waits'
            path: '/srv/config/flame'
          emptyDir:
