custom/patches/deployment.homeassistant.yaml
---

apiVersion: 'apps/v1'
kind: 'Deployment'
metadata:
  name: 'homeassistant'
spec:
  template:
    spec:
      volumes:
        - name: 'homeassistant-config'
          nfs:
            server: '3bp-waits'
            path: '/srv/config/homeassistant'
          emptyDir:
