custom/patches/deployment.transmission.yaml
---

apiVersion: 'apps/v1'
kind: 'Deployment'
metadata:
  name: 'transmission'
spec:
  template:
    spec:
      volumes:
        - name: 'transmission-config'
          nfs:
            server: '3bp-waits'
            path: '/srv/config/transmission'
          emptyDir:
        - name: 'transmission-downloads'
          nfs:
            server: '3bp-waits'
            path: '/srv/downloads'
          emptyDir:
